# data_exchange_system-

./: .build-test-rules.yml  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  flash.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old  start.sh  test-mesh-network.sh
.github/: pull_request_template.md
.github/workflows/: build.yml
docker/: Dockerfile  start.sh
docs/: message_flow.md  message_protocol.md  testing.md  uart_setup.md  Диаграмма без названия.drawio  Схема.drawio
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  event_handler.c  main.c
main/include/: common.h  drone_message.h  espnow_handler.h  event_handler.h  mavlink_handler.h  mesh_light.h  msg_handler.h  uart_handler.h
main/src/: drone_message.c  espnow_handler.c  event_handler.c  main.c  mavlink_handler.c  mavlink_parser.c  msg_handler.c  uart_handler.c
tests/: config.py  conftest.py
